<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MakeMemeActivity">

    <RelativeLayout
        android:id="@+id/tlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/top_text"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText1"
            android:gravity="center"
            android:hint="@string/bottom_text"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText2"
            android:layout_margin="30dp"
            android:background="@drawable/button_bg"
            android:backgroundTint="@color/bruh"
            android:onClick="clear"
            android:text="@string/clear"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/go"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText2"
            android:layout_margin="30dp"
            android:layout_toEndOf="@+id/btnClear"
            android:background="@drawable/button_bg"
            android:backgroundTint="@color/colorAccent"
            android:onClick="tryBtn"
            android:text="@string/trybtn"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/blay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:backgroundTint="#FA8072"
            android:text="@string/choose_image"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:backgroundTint="#9ACD32"
            android:onClick="save"
            android:text="@string/save"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:backgroundTint="#FF00FF"
            android:onClick="share"
            android:text="@string/share"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/blay"
        android:layout_below="@+id/tlay"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/product"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/product"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="40sp" />


    </RelativeLayout>

</RelativeLayout>